<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwd"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/passwd" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/login"
        android:layout_above="@+id/passwd"
        android:layout_alignLeft="@+id/passwd"
        android:layout_alignStart="@+id/passwd"
        android:layout_alignRight="@+id/passwd"
        android:layout_alignEnd="@+id/passwd"
        android:hint="@string/login" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:id="@+id/login_button"
        android:layout_below="@+id/passwd"
        android:layout_alignRight="@+id/passwd"
        android:layout_alignEnd="@+id/passwd"
        android:layout_alignLeft="@+id/passwd"
        android:layout_alignStart="@+id/passwd" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/register_button"
        android:layout_below="@+id/login_button"
        android:layout_alignRight="@+id/login_button"
        android:layout_alignEnd="@+id/login_button"
        android:layout_alignLeft="@+id/login_button"
        android:layout_alignStart="@+id/login_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wlcmsg"
        android:id="@+id/error"
        android:layout_above="@+id/login"
        android:layout_alignLeft="@+id/login"
        android:layout_alignStart="@+id/login"
        android:layout_alignRight="@+id/login"
        android:layout_alignEnd="@+id/login"
        android:textAlignment="center" />
</RelativeLayout>