<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/eventName"
        style="@style/section_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/date"
        android:gravity="center_horizontal"
        style="@style/seemore_layout" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/subscribe"
            android:id="@+id/subscribe"
            android:layout_weight="50" />

        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/remind"
            android:id="@+id/reminder"
            android:layout_weight="50" />

        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/delete"
            android:layout_weight="50" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/participants"
        android:id="@+id/textView16"
        android:layout_gravity="center_horizontal"
        style="@style/bigtitle" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_gravity="center_horizontal" />
</LinearLayout>