<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/currentGt"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:hint="@string/gamertag"
        style="@android:style/Widget.DeviceDefault.EditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/findstats"
        android:id="@+id/button"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/currentGt"
        android:layout_alignStart="@+id/currentGt"
        android:layout_alignRight="@+id/currentGt"
        android:layout_alignEnd="@+id/currentGt"
        style="@android:style/Widget.DeviceDefault.Button" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/currentGt"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/halo5"
        android:contentDescription="@string/halologo"/>
</RelativeLayout>