<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        style="@style/section_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/general"
        android:id="@+id/textView2"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/relativeLayout5"
            android:layout_weight="0.25" >

            <TextView
                style="@style/section_box_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/winrate"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                style="@style/section_box_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/zero"
                android:id="@+id/lvl"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/relativeLayout6" >

            <TextView
                style="@style/section_box_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kills"
                android:id="@+id/textView5"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                style="@style/section_box_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/zero"
                android:id="@+id/kills"
                android:layout_below="@+id/textView5"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/relativeLayout7" >

            <TextView
                style="@style/section_box_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kd"
                android:id="@+id/textView7"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                style="@style/section_box_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/zero"
                android:id="@+id/kd"
                android:layout_below="@+id/textView7"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/relativeLayout8" >

            <TextView
                style="@style/section_box_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/games"
                android:id="@+id/textView9"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                style="@style/section_box_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/zero"
                android:id="@+id/games"
                android:layout_below="@+id/textView9"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/relativeLayout"
            android:layout_weight="0.25" >

            <TextView
                style="@style/section_box_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assists"
                android:id="@+id/textView11"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                style="@style/section_box_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/zero"
                android:id="@+id/assists"
                android:layout_below="@+id/textView11"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/relativeLayout2" >

            <TextView
                style="@style/section_box_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/headshots"
                android:id="@+id/textView13"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                style="@style/section_box_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/zero"
                android:id="@+id/headshots"
                android:layout_below="@+id/textView13"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/relativeLayout3" >

            <TextView
                style="@style/section_box_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kpg"
                android:id="@+id/textView15"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                style="@style/section_box_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/zero"
                android:id="@+id/killspgame"
                android:layout_below="@+id/textView15"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/relativeLayout4" >

            <TextView
                style="@style/section_box_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/srank"
                android:id="@+id/textView17"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                style="@style/section_box_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/zero"
                android:id="@+id/spartanrank"
                android:layout_below="@+id/textView17"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/relativeLayout13"
            android:layout_weight="0.50" >

            <TextView
                style="@style/section_box_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nri"
                android:id="@+id/textView19"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                style="@style/section_box_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/zero"
                android:id="@+id/xp"
                android:layout_below="@+id/textView19"
                android:layout_centerHorizontal="true" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressXp"
                android:layout_below="@+id/xp"
                android:layout_alignRight="@+id/xp"
                android:layout_alignEnd="@+id/xp"
                android:layout_alignParentBottom="true"
                android:layout_alignLeft="@+id/xp"
                android:layout_alignStart="@+id/xp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="0.50"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/relativeLayout14" >

            <TextView
                style="@style/section_box_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playtime"
                android:id="@+id/textView21"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                style="@style/section_box_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/zero"
                android:id="@+id/playtime"
                android:layout_below="@+id/textView21"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>